--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <table>
     <tr>
-        <td id="img"><img src="file:///C:/Users/motor/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/pythonProject1/nb1.jpg"></td>
+        <td id="img"><img src="C:\Users\motor\OneDrive\Рабочий стол\pythonProject1\nb1.jpg"></td>
         <td id="nazv">New Balance 530 White Silver</td>
         <td id="cost">19 990 рублей</td>
         <td id="buy"><a href="#">купить</a></td>
