--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <table>
     <tr>
-        <td id="img"><img src="https://github.com/draindoggy/sneakerheads/blob/main/nb1.jpg"></td>
+        <td id="img"><img src="nb1.jpg"></td>
         <td id="nazv">New Balance 530 White Silver</td>
         <td id="cost">19 990 рублей</td>
         <td id="buy"><a href="#">купить</a></td>
