--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <li><a href="">корзина</a></li>
   <li><a href="">контакты</a></li>
 </ul>
+    
+<ul class="brands">
+    <li>Бренды:</li>
+    <li>new balance</li>
+    <li>nike</li>
+    <li>adidas</li>
+</ul>
 
 <table>
     <tr>
