--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <ul class="menu-main">
   <li><a href="" class="current">каталог</a></li>
   <li><a href="">корзина</a></li>
-  <li><a href="">контакты</a></li>
+  <li><a href="contacts.html">контакты</a></li>
 </ul>
     
 <ul class="brands">
